--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div 
+          id="user-data" 
+          ngModelGroup="userData"
+          #userDate="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input 
@@ -27,7 +30,7 @@
               #email="ngModel">
               <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
-          <p *ngIf="">please enter a valid value!</p>
+          <p *ngIf="!userDate.valid && userDate.touched">User date is not valid!</p>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
