--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <div 
           id="user-data" 
           ngModelGroup="userData"
-          #userDate="ngModelGroup">
+          #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input 
@@ -13,10 +13,10 @@
               id="username" 
               class="form-control" 
               ngModel
-              name="name"
+              name="username"
               required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
@@ -30,7 +30,7 @@
               #email="ngModel">
               <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
-          <p *ngIf="!userDate.valid && userDate.touched">User date is not valid!</p>
+          <p *ngIf="!userData.valid && userData.touched">User date is not valid!</p>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
