--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,5 +69,15 @@
       </form>
     </div>
   </div>
-  
+  <hr>
+  <div class="row" *ngIf="submitted">
+    <div class="col-xs-12">
+      <h3>Your Data</h3>
+      <p>UserName: {{ user.username }}</p>
+      <p>Email: {{ user.email }}</p>
+      <p>Secrete Question: Your First {{ user.secretQuestion }}</p>
+      <p>Answer: {{ user.answer }}</p>
+      <p>Gender: {{ user.gender }}</p>
+    </div>
+  </div>
 </div>
